// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not change code if no .schema or .displayName assignments are found 1`] = `
"import React from \\"react\\";
import RichText from \\"vtex.store-components/RichText\\";

const HelloWorld = () => <div>
    <RichText textAlignment=\\"CENTER\\" textPosition=\\"CENTER\\" text=\\"# Hello, World!\\" />
  </div>;

HelloWorld.notADisplayName = 'hello-world';
HelloWorld.notASchema = {
  title: 'Hello World',
  properties: {
    text: {
      title: \\"Text\\",
      type: \\"string\\"
    },
    alignment: {
      title: \\"Alignment\\",
      type: \\"string\\"
    }
  }
};
export default HelloWorld;"
`;

exports[`should remove .schema and .displayName assignments from JSX code 1`] = `
"import React from \\"react\\";
import RichText from \\"vtex.store-components/RichText\\";

const HelloWorld = () => <div>
    <RichText textAlignment=\\"CENTER\\" textPosition=\\"CENTER\\" text=\\"# Hello, World!\\" />
  </div>;

export default HelloWorld;"
`;
